<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="22dp"
    android:paddingEnd="22dp"
    android:paddingTop="10dp">

    <EditText
        android:id="@+id/etConfirmPin"
        style="@style/SGInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/security_question_confirm_pin"
        android:inputType="numberPassword"
        android:maxLength="4" />

    <EditText
        android:id="@+id/etQuestion"
        style="@style/SGInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/security_question_hint"
        android:inputType="text"
        android:maxLines="2" />

    <EditText
        android:id="@+id/etAnswer"
        style="@style/SGInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/security_question_answer_hint"
        android:inputType="text" />
</LinearLayout>
